# hello_gfx

./: .gitignore  CMakeLists.txt  Makefile
ext/: CMakeLists.txt
ext/glad/: gl.h  gles1.h  gles2.h  vulkan.h
ext/glad/include/glad/: gl.h  gles1.h  gles2.h  vulkan.h
ext/glad/src/: gl.c  gles2.c  vulkan.c
src/gl/: CMakeLists.txt  displayTexture.cpp  eglHelloTriangle.cpp  fbo.cpp  glClear.cpp  glGenerateMipmap.cpp  glOrtho.cpp  glTexCoordPointer.cpp  glUniform.cpp  glVertexPointer.cpp  gl_PointSize.cpp  hello_triangle.cpp  multiVBO.cpp  perf_copytex.cpp  perf_drawoverhead.cpp  perf_fbobind.cpp  perf_fill_gl.cpp  perf_fill_glLegacy.cpp  perf_genmipmap.cpp  perf_glslstatechange.cpp  perf_readpixels.cpp  perf_swapbuffers.cpp  perf_teximage.cpp  perf_vbo.cpp  perf_vertexrate.cpp  textureCopy.cpp  textureDisplayByFbo.cpp  textureDisplayByFboBlit.cpp  textureDisplayByShader.cpp  textureRead.cpp  triangle-opengl.c  triangle-opengles.c  triangle.cpp  verify_copytex.cpp
src/gl/bug_img/: bug_gl_PointSize.cpp  gl_PointSize.cpp
src/utils/: CMakeLists.txt  SGI_rgb.cpp  SGI_rgb.h  eglUtils.cpp  eglUtils.h  eglutils.cpp  eglutils.h  glUtils.cpp  glUtils.h  glad.h  glfwUtils.cpp  glfwUtils.h  glfwutils.cpp  glfwutils.h  glutils.cpp  glutils.h  myUtils.cpp  myutils.cpp  myutils.h  project_config.h.in  stbTest.cpp  x11Utils.cpp  x11Utils.h  x11utils.cpp  x11utils.h
